[package]
name = "pm01vst"
version = "0.0.1"
authors = ["sockcrates <17348049+sockcrates@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"

[lib]
name = "pm01vst"
crate-type = ["cdylib"]
