[package]
name = "legato-fix-vst"
version = "0.0.4"
authors = ["sockcrates <17348049+sockcrates@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }

[lib]
name = "legatofixvst"
crate-type = ["cdylib"]
